<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BC1C2B"
    android:orientation="vertical">


    <TextView
        android:layout_width="190dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="124dp"
        android:text="@string/welcome_back_continue_to_sign_in"
        android:textSize="20dp"
        android:textStyle="bold">

    </TextView>


    <View
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="211dp"
        android:background="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="242dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/EtName"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="329dp"
        android:background="@color/black"
        android:hint="@string/enter_the_name"
        android:textAlignment="textStart"
        android:textStyle="bold" />

    <EditText

        android:layout_width="352dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="193dp"
        android:background="@color/black"
        android:hint="@string/enter_password"
        android:textAlignment="textStart"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="156dp"
        android:text="@string/forgot_password"
        android:textColor="#BC1C2B"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="368dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <Button
        android:id="@+id/BtnSignIn2"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="69dp"
        android:background="#BC1C2B"
        android:text="@string/sign_in" />

    <TextView
        android:layout_width="157dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="142dp"
        android:layout_marginBottom="23dp"
        android:background="#A2A2A2"
        android:gravity="center"
        android:text="@string/dont"
        android:textAlignment="gravity" />


</RelativeLayout>