<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BC1C2B"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="166dp"
        android:padding="60dp"
        android:text="WELCOME"
        android:background="#BC1C2B"

        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35dp" />

    <TextView
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:text="@string/TextMasai"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/ivLady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/homepage" />

    <Button
        android:id="@+id/BtnSignIn"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="40dp"
        android:background="#FFFFFF"
        android:text="@string/sign_in"
        android:textColor="#BC1C2B"
        />

    <Button
        android:id="@+id/BtnSignUp"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="40dp"
        android:background="#000000"
        android:layout_marginBottom="20dp"
        android:text="@string/signup"
        android:textColor="#FFFFFF" />

</LinearLayout>